test cases and readme added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.sql.init.mode=always
 spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_AUDIT
 spring.jpa.properties.org.hibernate.envers.revision_field_name=REVISION_ID
 spring.jpa.properties.org.hibernate.envers.revision_type_field_name=REVISION_TYPE
+
+logging.level.root=INFO
+logging.level.your.package.name=DEBUG
