--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,20 +21,63 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn clean install
-    - name: Build & push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v6
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
       with:
-        image: cdere/customer-onboarding-application
-        tags: latest
-        registry: docker.io
-        dockerfile: Dockerfile
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        name: jar-artifact
+        path: target/ec2-deploy-springboot-0.0.1-SNAPSHOT.jar
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: jar-artifact
+          path: .
+
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Copy JAR to EC2
+        run: |
+          scp -i ~/.ssh/id_rsa -P ${{ secrets.EC2_PORT }} customer-onboaring-application.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/customer-onboaring-application.jar
+
+      - name: Restart Application
+        run: |
+          ssh -i ~/.ssh/id_rsa -p ${{ secrets.EC2_PORT }} ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+            echo "Connected to EC2: $(hostname)"
+            # Install Java 17 (Amazon Corretto)
+            if ! java -version 2>&1 | grep "17" > /dev/null; then
+              sudo yum install java-17-amazon-corretto -y
+            else
+              echo "Java 17 already installed."
+            fi
+          
+            # Set JAVA_HOME and update PATH
+            export JAVA_HOME=/usr/lib/jvm/java-17-amazon-corretto
+            export PATH=$JAVA_HOME/bin:$PATH         
+          
+            echo "Killing or stopping the existing application if any"
+            pkill -f customer-onboaring-application || true
+          
+            #Starting spring boot app
+            nohup java -jar /home/ubuntu/customer-onboaring-application.jar > /home/ubuntu/application.log 2>&1 &
+            echo "application installation complete"
+          EOF
