--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: jar-artifact
-        path: target/ec2-deploy-springboot-0.0.1-SNAPSHOT.jar
+        path: target/customer-onboaring-application.jar
 
   deploy:
     needs: build
