--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -65,7 +65,8 @@ jobs:
             echo "Connected to EC2: $(hostname)"
             # Install Java 17
             if ! java -version 2>&1 | grep "17" > /dev/null; then
-              sudo apt install openjdk-17-jre-headless
+              sudo apt update
+              sudo apt install openjdk-17-jdk
             else
               echo "Java 17 already installed."
             fi
